tests/palaiologos/fail/integer_bounds/-2^32+1/rep_drop.asm
rep drop -0ffffffffh
